perubahan fungsi see more

--- a/icecream.html
+++ b/icecream.html
@@ -33,7 +33,7 @@
 <body>
    <div class="header_section header_bg">
       <div class="container">
-       <nav class="navbar navbar-expand-lg navbar-light bg-light">
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="index.html"><img src="images/cafetaria-logo.png"
                   style="width: 80px; height: 80px; object-fit: cover;"></a>
 
@@ -89,111 +89,113 @@
                <p class="cream_text"></p>
             </div>
          </div>
-         <div class="cream_section_2">
-            <div class="row">
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/rice.png" alt="rice bowl"></div>
-                     <div class="price_text">13k</div>
-                     <h6 class="strawberry_text">Rice Bowl</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
+         <div id="produk-page">
+            <div class="cream_section_2">
+               <div class="row">
+                  <div class="col-md-4">
+                     <div class="cream_box" id="cream">
+                        <div class="cream_img"><img class="img-fluid" src="images/rice.png" alt="rice bowl"></div>
+                        <div class="price_text">13k</div>
+                        <h6 class="strawberry_text">Rice Bowl</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
                   </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/lumpia.png" alt="lumpia"></div>
-                     <div class="price_text">7K</div>
-                     <h6 class="strawberry_text">Rolling Lumpia Beef</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img class="img-fluid" src="images/lumpia.png" alt="lumpia"></div>
+                        <div class="price_text">7K</div>
+                        <h6 class="strawberry_text">Rolling Lumpia Beef</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
                   </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/sempol.png" alt="sempol"></div>
-                     <div class="price_text">5K</div>
-                     <h6 class="strawberry_text">Sempol</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img class="img-fluid" src="images/sempol.png" alt="sempol"></div>
+                        <div class="price_text">5K</div>
+                        <h6 class="strawberry_text">Sempol</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
                   </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/kripca.png" alt="kaca keripiks"></div>
-                     <div class="price_text">5K</div>
-                     <h6 class="strawberry_text">Keripik Kaca</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img class="img-fluid" src="images/kripca.png" alt="kaca keripiks"></div>
+                        <div class="price_text">5K</div>
+                        <h6 class="strawberry_text">Keripik Kaca</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
                   </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/puding.png" alt="pudding"></div>
-                     <div class="price_text">5K</div>
-                     <h6 class="strawberry_text">Pudding Vla</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img class="img-fluid" src="images/puding.png" alt="pudding"></div>
+                        <div class="price_text">5K</div>
+                        <h6 class="strawberry_text">Pudding Vla</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
                   </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/wawan_es.png" alt="es wawan"></div>
-                     <div class="price_text">5K</div>
-                     <h6 class="strawberry_text">Es Wawan</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="cream_section_2">
-            <div class="row">
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/buah.png" alt="buah ptong"></div>
-                     <div class="price_text">6K</div>
-                     <h6 class="strawberry_text">Buah Potong Cup</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/jus.png" alt="buah jus"></div>
-                     <div class="price_text">8K</div>
-                     <h6 class="strawberry_text">Jus Buah Segar</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/kopi.png" alt="kopi"></div>
-                     <div class="price_text">10K</div>
-                     <h6 class="strawberry_text">Coffee</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/bbeng.png" alt="bbng share"></div>
-                     <div class="price_text">2k</div>
-                     <h6 class="strawberry_text">Beng-Beng</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img src="images/bbeng_maxx.png" class="img-fluid" alt="bbng mex"></div>
-                     <div class="price_text">3k</div>
-                     <h6 class="strawberry_text">Beng-Beng Maxx</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="cream_box">
-                     <div class="cream_img"><img class="img-fluid" src="images/nabati.png" alt="nabati"></div>
-                     <div class="price_text">2k</div>
-                     <h6 class="strawberry_text">Nabati</h6>
-                     <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img class="img-fluid" src="images/wawan_es.png" alt="es wawan"></div>
+                        <div class="price_text">5K</div>
+                        <h6 class="strawberry_text">Es Wawan</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
                   </div>
                </div>
             </div>
+            <div class="cream_section_2">
+               <div class="row">
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img class="img-fluid" src="images/buah.png" alt="buah ptong"></div>
+                        <div class="price_text">6K</div>
+                        <h6 class="strawberry_text">Buah Potong Cup</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img class="img-fluid" src="images/jus.png" alt="buah jus"></div>
+                        <div class="price_text">8K</div>
+                        <h6 class="strawberry_text">Jus Buah Segar</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img class="img-fluid" src="images/kopi.png" alt="kopi"></div>
+                        <div class="price_text">10K</div>
+                        <h6 class="strawberry_text">Coffee</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img class="img-fluid" src="images/bbeng.png" alt="bbng share"></div>
+                        <div class="price_text">2k</div>
+                        <h6 class="strawberry_text">Beng-Beng</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img src="images/bbeng_maxx.png" class="img-fluid" alt="bbng mex"></div>
+                        <div class="price_text">3k</div>
+                        <h6 class="strawberry_text">Beng-Beng Maxx</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="cream_box">
+                        <div class="cream_img"><img class="img-fluid" src="images/nabati.png" alt="nabati"></div>
+                        <div class="price_text">2k</div>
+                        <h6 class="strawberry_text">Nabati</h6>
+                        <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="seemore_bt text-center mt-4"><a href="#" onclick="showMore(event)">See More</a></div>
          </div>
-         <div class="seemore_bt"><a href="#">See More</a></div>
       </div>
    </div>
    <!-- cream sectuion end -->
@@ -215,7 +217,9 @@
    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
    <script src="js/custom.js"></script>
    <script src="js/penjualan-cart.js"></script>
+   <script src="js/style.js"></script>
    <!-- javascript -->
+
 
 </body>
 
