--- a/index.html
+++ b/index.html
@@ -178,72 +178,74 @@
             <!-- about sectuion end -->
             <!-- cream sectuion start -->
             <div class="cream_section layout_padding" id="cream-section">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-md-12">
-                        <h1 class="cream_taital2">Produk Pilihan Kami</h1>
-                        <p class="cream_text"></p>
-                     </div>
-                  </div>
-                  <div class="cream_section_2">
+               <div id="produk-page">
+                  <div class="container">
                      <div class="row">
-                        <div class="col-md-4">
-                           <div class="cream_box">
-                              <div class="cream_img"><img class="img-fluid"
-                                    src="images/bbeng_maxx.png" alt="bbng mex"></div>
-                              <div class="price_text">3k</div>
-                              <h6 class="strawberry_text">Beng-Beng Maxx</h6>
-                              <div class="cart_bt"><a href="#">Add To Cart</a></div>
-                           </div>
+                        <div class="col-md-12">
+                           <h1 class="cream_taital2">Produk Pilihan Kami</h1>
+                           <p class="cream_text"></p>
                         </div>
-                        <div class="col-md-4">
-                           <div class="cream_box">
-                              <div class="cream_img"><img class="img-fluid" src="images/nabati.png" alt="nabati">
+                     </div>
+                     <div class="cream_section_2">
+                        <div class="row">
+                           <div class="col-md-4">
+                              <div class="cream_box">
+                                 <div class="cream_img"><img class="img-fluid" src="images/bbeng_maxx.png"
+                                       alt="bbng mex"></div>
+                                 <div class="price_text">3k</div>
+                                 <h6 class="strawberry_text">Beng-Beng Maxx</h6>
+                                 <div class="cart_bt"><a href="#">Add To Cart</a></div>
                               </div>
-                              <div class="price_text">2k</div>
-                              <h6 class="strawberry_text">Nabati</h6>
-                              <div class="cart_bt"><a href="#">Add To Cart</a></div>
                            </div>
-                        </div>
-                        <div class="col-md-4">
-                           <div class="cream_box">
-                              <div class="cream_img"><img class="img-fluid" src="images/bbeng.png" alt="bbeng share">
+                           <div class="col-md-4">
+                              <div class="cream_box">
+                                 <div class="cream_img"><img class="img-fluid" src="images/nabati.png" alt="nabati">
+                                 </div>
+                                 <div class="price_text">2k</div>
+                                 <h6 class="strawberry_text">Nabati</h6>
+                                 <div class="cart_bt"><a href="#">Add To Cart</a></div>
                               </div>
-                              <div class="price_text">2k</div>
-                              <h6 class="strawberry_text">Beng-Beng</h6>
-                              <div class="cart_bt"><a href="#">Add To Cart</a></div>
                            </div>
-                        </div>
-                        <div class="col-md-4">
-                           <div class="cream_box">
-                              <div class="cream_img"><img class="img-fluid"
-                                    src="images/wawan_es.png" alt="es wawan"></div>
-                              <div class="price_text">5K</div>
-                              <h6 class="strawberry_text">Es Wawan</h6>
-                              <div class="cart_bt"><a href="#">Add To Cart</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-4">
-                           <div class="cream_box">
-                              <div class="cream_img"><img class="img-fluid" src="images/puding.png" alt="pudding">
+                           <div class="col-md-4">
+                              <div class="cream_box">
+                                 <div class="cream_img"><img class="img-fluid" src="images/bbeng.png" alt="bbeng share">
+                                 </div>
+                                 <div class="price_text">2k</div>
+                                 <h6 class="strawberry_text">Beng-Beng</h6>
+                                 <div class="cart_bt"><a href="#">Add To Cart</a></div>
                               </div>
-                              <div class="price_text">5K</div>
-                              <h6 class="strawberry_text">Pudding Vla</h6>
-                              <div class="cart_bt"><a href="#">Add To Cart</a></div>
                            </div>
-                        </div>
-                        <div class="col-md-4">
-                           <div class="cream_box">
-                              <div class="cream_img"><img class="img-fluid" src="images/sempol.png" alt="sempol">
+                           <div class="col-md-4">
+                              <div class="cream_box">
+                                 <div class="cream_img"><img class="img-fluid" src="images/wawan_es.png" alt="es wawan">
+                                 </div>
+                                 <div class="price_text">5K</div>
+                                 <h6 class="strawberry_text">Es Wawan</h6>
+                                 <div class="cart_bt"><a href="#">Add To Cart</a></div>
                               </div>
-                              <div class="price_text">5K</div>
-                              <h6 class="strawberry_text">Sempol</h6>
-                              <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                           </div>
+                           <div class="col-md-4">
+                              <div class="cream_box">
+                                 <div class="cream_img"><img class="img-fluid" src="images/puding.png" alt="pudding">
+                                 </div>
+                                 <div class="price_text">5K</div>
+                                 <h6 class="strawberry_text">Pudding Vla</h6>
+                                 <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                              </div>
+                           </div>
+                           <div class="col-md-4">
+                              <div class="cream_box">
+                                 <div class="cream_img"><img class="img-fluid" src="images/sempol.png" alt="sempol">
+                                 </div>
+                                 <div class="price_text">5K</div>
+                                 <h6 class="strawberry_text">Sempol</h6>
+                                 <div class="cart_bt"><a href="#">Add To Cart</a></div>
+                              </div>
                            </div>
                         </div>
                      </div>
+                     <div class="seemore_bt"><a href="icecream.html">See More</a></div>
                   </div>
-                  <div class="seemore_bt"><a href="icecream.html">See More</a></div>
                </div>
             </div>
             <!-- cream sectuion end -->
@@ -326,6 +328,7 @@
             <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
             <script src="js/custom.js"></script>
             <script src="js/penjualan-cart.js"></script>
+            <script src="js/style.js"></script>
             <!-- javascript -->
             <script>
                $(document).ready(function () {
