--- a/index.html
+++ b/index.html
@@ -307,14 +307,6 @@
                   </div>
                </div>
             </div>
-            <!-- contact section end -->
-            <!-- copyright section start -->
-            <div class="copyright_section">
-               <div class="container">
-                  <p class="copyright_text">© 2025 Kelompok Cafetaria. Desain oleh Cafetaria team.
-                     </a></p>
-               </div>
-            </div>
             <!-- copyright section end -->
             <!-- Javascript files-->
             <script src="js/jquery.min.js"></script>
@@ -331,7 +323,7 @@
                $(document).ready(function () {
                   $('#services-section').load('sections/services.html');
                   $('#testimoni-section').load('sections/testimonial.html');
-                  $('#contact-section').load('sections/contact.html');
+                  $('#contact-section').load('sections/contact-sec.html');
                });
             </script>
 </body>
